Increase allowed size of stored procedure bodies to 4GB, and produce a sensible error when that limit is exceeded. (Bug #11602)