sql/sql_parse.cc
@@ -4112,6 +4112,12 @@ end_with_restore_list:
       delete lex->sphead;
       lex->sphead= 0;
       goto error;
+    case SP_BODY_TOO_LONG:
+      my_error(ER_TOO_LONG_BODY, MYF(0), name);
+      lex->unit.cleanup();
+      delete lex->sphead;
+      lex->sphead= 0;
+      goto error;
     default:
       my_error(ER_SP_STORE_FAILED, MYF(0), SP_TYPE_STRING(lex), name);
       lex->unit.cleanup();
